--- a/CatFacts.Contracts/CatFacts.Contracts.csproj
+++ b/CatFacts.Contracts/CatFacts.Contracts.csproj
@@ -2,12 +2,13 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
+    <Nullable>enable</Nullable>
+    <OutputType>Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.2" />
+    <PackageReference Include="FluentResults" Version="4.0.0" />
   </ItemGroup>
 
 </Project>
